# rope_pp

./: README.md  pyproject.toml  speedrun-1gpu.sh  speedrun-8gpu.sh  speedrun-eval.sh  speedrun.sh  test_memory.py  test_ppl.py  train_alibi-decay.py  train_alibi.py  train_fope-decay.py  train_fope.py  train_pythia-decay.py  train_pythia.py  train_rope_pp-decay.py  train_rope_pp-decay_single_gpu.py  train_rope_pp-lctx-linear.py  train_rope_pp-lctx.py  train_rope_pp.py  train_rope_pp_single_gpu.py
eval/: eval_alibi_short.py  eval_fope_short.py  eval_lmharness-lctx.py  eval_lmharness.py  eval_pythia_short.py  eval_rope_pp_babilong.py  eval_rope_pp_ruler.py  eval_rope_pp_ruler_mask.py  eval_rope_pp_short.py
llama_variants/: configuration_llama.py  modeling_llama_mask.py  modeling_llama_rope_pp.py
multi-gpu/: train_rope_pp-decay.py  train_rope_pp-lctx.py  train_rope_pp.py
rope_pp/: alibi_wrapper.py  fope_wrapper.py  mask_wrapper.py  modeling_llama_alibi.py  modeling_llama_fope.py  modeling_llama_pythia.py  pythia_wrapper.py  rope_pp_wrapper.py
scripts/: train-1_5b-rope.sh  train-1_5b-rope_pp_ec.sh  train-1_5b-rope_pp_eh.sh  train-376m-alibi.sh  train-376m-fope.sh  train-376m-pythia.sh  train-376m-rope.sh  train-376m-rope_pp_ec.sh  train-376m-rope_pp_eh.sh  train-776m-alibi.sh  train-776m-fope.sh  train-776m-pythia.sh  train-776m-rope.sh  train-776m-rope_pp_ec.sh  train-776m-rope_pp_eh.sh
single-gpu/: train_rope_pp-decay_single_gpu.py  train_rope_pp-lctx_single_gpu.py  train_rope_pp_single_gpu.py
utils/: callback_utils.py  dataset_utils.py  trainer_utils.py
